--- a/xv6-public/TODO
+++ b/xv6-public/TODO
@@ -2,3 +2,4 @@ TC 8 an TC 10 FAILED => how to find file struct if file is closed? => filedup
 TC 17-20 Fork
 TC 21 ELF
 TC 21-25 Copy on Write
+Erro handling in trap.c
